#
# Makefile.am
#
# Written by: Francesco Salvestrini <f DOT salvestrini AT nextworks DOT it>
#

nobase_pkginclude_HEADERS = \
	librina.h				\
	logs.h					\
	common.h				\
	ipc-api.h               \
	application.h		    \
	configuration.h			\
	internal-events.h       \
	ipc-daemons.h			\
	ipc-manager.h			\
	ipc-process.h			\
	faux-sockets.h			\
	cdap.h					\
	likely.h				\
	rib.h                   \
	irm.h					\
	sdu-protection.h		\
	patterns.h				\
	exceptions.h			\
	concurrency.h			\
	time.h					\
	timer.h
