#
# Makefile.am
#
# Written by: Francesco Salvestrini <f DOT salvestrini AT nextworks DOT it>
#

nobase_pkginclude_HEADERS = \
	librina.h				\
	logs.h					\
	common.h				\
	ipc-api.h               \
	application.h		    \
	configuration.h			\
	internal-events.h       \
	ipc-daemons.h			\
	ipc-manager.h			\
	ipc-process.h			\
	faux-sockets.h			\
	cdap.h					\
	likely.h				\
	rib.h                    		\
	cdap_v2.h					\
	rib_v2.h                    		\
	cdap_rib_structures.h		\
	sdu-protection.h			\
	irm.h					\
	patterns.h				\
	exceptions.h			\
	concurrency.h			\
	time.h					\
	timer.h					\
	plugin-info.h
